--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "Prettier": "npm:prettier@^3.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
@@ -71,7 +72,7 @@
     "msw": "^2.3.5",
     "msw-storybook-addon": "^2.0.3",
     "nyc": "^17.0.0",
-    "prettier": "^3.3.3",
+    "prettier": "3.3.3",
     "prop-types": "^15.8.1",
     "storybook": "^8.3.6",
     "typescript-eslint": "^8.2.0",
