--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
       <version>4.29.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-maven-plugin</artifactId>
+      <version>3.8.0</version>
+    </dependency>
+
   </dependencies>
 
   <!-- (24) <repositories/> -->
@@ -343,6 +349,15 @@
           <timestampedReports>false</timestampedReports>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.liquibase</groupId>
+        <artifactId>liquibase-maven-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <propertyFile>liquibase.properties</propertyFile>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 
