--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ server.port=${PORT:8080}
 spring.profiles.active=@springProfiles@
 spring.jpa.open-in-view=false
 
-# For properties defined with 
+# For properties defined with
 #    var=${SYMBOL:${env.SYMBOL}}
 # the SYMBOL value on the left of the : is the value from env,
 # and will pick up values from Dokku Config Vars.
 # The env.SYMBOL value on the right of the : is the value from a .env file
-#   and is picked up as a result of this plugin in the pom.xml  
+#   and is picked up as a result of this plugin in the pom.xml
 #     <groupId>me.paulschwarz</groupId>
 #     <artifactId>spring-dotenv</artifactId>
 
@@ -19,13 +19,15 @@ springdoc.swagger-ui.tryItOutEnabled=true
 # see: https://medium.com/@thecodinganalyst/configure-spring-security-csrf-for-testing-on-swagger-e9e6461ee0c1
 springdoc.swagger-ui.csrf.enabled=true
 management.endpoints.web.exposure.include=mappings
-
+spring.jpa.hibernate.ddl-auto=none
 app.admin.emails=${ADMIN_EMAILS:${env.ADMIN_EMAILS:phtcon@ucsb.edu}}
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 server.compression.enabled=false
 
 spring.mvc.format.date-time=iso
+
+spring.liquibase.change-log=db/migration/changelog-master.json
 
 app.oauth.login=${OAUTH_LOGIN:${env.OAUTH_LOGIN:/oauth2/authorization/google}}
 
